# paper.tech

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  nixpacks.toml  package-lock.json  plan.md  pyproject.toml
backend/: Agents.py  CLAUDE.md  Dockerfile  deep_analyzer.py  modal_app.py  nixpacks.toml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  mock_data.py  supermemory.py  vectordb.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  graph.py  handpick.py  ideas.py  match.py  scholars.py
backend/app/routes/: email.py
backend/app/services/: decider.py
backend/benchmark/: benchmark.py  plots.py
backend/benchmark/results/: benchmark_results.json
backend/db-scripts/: ingest.py  schema.py  scoring.py
backend/email_assistant/: email_assistant.py
backend/paper_tech_backend/: __main__.py
backend/static/: index.html
backend/static/assets/: index-BQAUKBaB.css  index-eqZ59E65.js
data/: datastore.ini
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  GeoFilter.jsx  GraphPlaceholder.jsx  HandpickSidebar.jsx  Navbar.jsx  ScholarCard.jsx  SearchBar.jsx
frontend/src/pages/: EmailDraftPage.jsx  LandingPage.jsx  ResultsPage.jsx
