[project]
name = "paper-tech-backend"
version = "0.1.0"
description = "paper.tech — AI-powered co-author discovery API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "openai>=1.0",
    "psycopg[binary]>=3.1",
    "numpy>=1.26",
    "networkx>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
